# ai-news-scraper

./: .env.example  .gitignore  .gitlab-ci.yml  CI-CD.MD  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_TODO.md  Dockerfile  ISSUES.MD  PRD.MD  README.MD  README.md  TASK.MD  TASK_TRACKING.md  azure-pipelines.yml  cli.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run_app.bat  run_app.ps1  run_app.sh  urls.txt
.taskmaster/docs/: prd.txt
docs/: PRD.md  README.md  TASKMASTER_GUIDE.md  TASK_MANAGEMENT.md
scripts/: check_nltk.py  run_app.bat  run_app.ps1  run_app.py  run_app.sh  setup_azure_devops.sh
src/: config.py  embedder.py  enhanced_pipeline.py  main.py  scraper.py  search.py  summarizer.py  topics.py  vector_store.py
src/ui/: app.py  utils.py
src/ui/pages/: error_handler.py  home.py  scrape.py  search.py  search_results.py  settings.py
tests/: test_integration.py  test_main.py  test_nltk_resources.py  test_scraper.py  test_search.py  test_vector_store.py
