[tool.poetry]
name = "ai-news-scraper"
version = "0.1.0"
description = "A Python application that scrapes news articles, generates summaries using GenAI, and provides semantic search"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
newspaper3k = "^0.2.8"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
faiss-cpu = "^1.7.4"
langchain = "^0.0.335"
typer = "^0.9.0"
pytest = "^7.4.3"
asyncio = "^3.4.3"
aiohttp = "^3.8.6"
pytest-asyncio = "^0.21.1"
pydantic = "^2.4.2"
tenacity = "^8.2.3"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
